force-app/main/default/objects/NewApp__c/NewApp__c.object-meta.xml
<CustomObject>
    <label>New Applications</label>
    <nameField>
        <label>Application for</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>