force-app/main/default/objects/NewApp__c/fields/A_Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>A_Number_of_Units__c</fullName>
    <label>Number of Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>