force-app/main/default/objects/NewApp__c/fields/A_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>A_Physical_Address__c</fullName>
    <label>Physical Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>