force-app/main/default/objects/NewApp__c/fields/A_Physical_City__c.field-meta.xml
<CustomField>
    <fullName>A_Physical_City__c</fullName>
    <label>Physical City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>