force-app/main/default/objects/NewApp__c/fields/A_Physical_State__c.field-meta.xml
<CustomField>
    <fullName>A_Physical_State__c</fullName>
    <label>Physical State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>