force-app/main/default/objects/NewApp__c/fields/A_Physical_Zip__c.field-meta.xml
<CustomField>
    <fullName>A_Physical_Zip__c</fullName>
    <label>Physical Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>