force-app/main/default/objects/NewApp__c/fields/Agency_City__c.field-meta.xml
<CustomField>
    <fullName>Agency_City__c</fullName>
    <label>Agency City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>