force-app/main/default/objects/NewApp__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <label>Agency Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>