force-app/main/default/objects/NewApp__c/fields/Agency_Street2__c.field-meta.xml
<CustomField>
    <fullName>Agency_Street2__c</fullName>
    <label>Agency Street2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>