force-app/main/default/objects/NewApp__c/fields/Agency_Street__c.field-meta.xml
<CustomField>
    <fullName>Agency_Street__c</fullName>
    <label>Agency Street</label>
    <length>30</length>
    <type>Text</type>
</CustomField>