force-app/main/default/objects/NewApp__c/fields/Agency_Ziip__c.field-meta.xml
<CustomField>
    <fullName>Agency_Ziip__c</fullName>
    <label>Agency Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>