force-app/main/default/objects/NewApp__c/fields/Agree_and_understand2__c.field-meta.xml
<CustomField>
    <fullName>Agree_and_understand2__c</fullName>
    <label>Agree and understand2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>