force-app/main/default/objects/NewApp__c/fields/Agree_and_understand__c.field-meta.xml
<CustomField>
    <fullName>Agree_and_understand__c</fullName>
    <label>Agree and understand?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>