force-app/main/default/objects/NewApp__c/fields/City_Mail__c.field-meta.xml
<CustomField>
    <fullName>City_Mail__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>