force-app/main/default/objects/NewApp__c/fields/Complaints_in_5_years__c.field-meta.xml
<CustomField>
    <fullName>Complaints_in_5_years__c</fullName>
    <label>Complaints  in 5 years?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>