force-app/main/default/objects/NewApp__c/fields/Contact_Person_at_Location__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_at_Location__c</fullName>
    <label>Contact Person at Location</label>
    <length>40</length>
    <type>Text</type>
</CustomField>