force-app/main/default/objects/NewApp__c/fields/Desired_Effecttive_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Effecttive_Date__c</fullName>
    <label>Desired Effecttive Date</label>
    <type>Date</type>
</CustomField>