force-app/main/default/objects/NewApp__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>