force-app/main/default/objects/NewApp__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>Producer__c</referenceTo>
    <relationshipName>Applicants_Insureds</relationshipName>
    <type>Lookup</type>
</CustomField>