force-app/main/default/objects/NewApp__c/fields/Producer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Producer_First_Name__c</fullName>
    <label>Producer First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>