force-app/main/default/objects/NewApp__c/fields/Producer_Name__c.field-meta.xml
<CustomField>
    <fullName>Producer_Name__c</fullName>
    <label>Producer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>