force-app/main/default/objects/NewApp__c/fields/Producer_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Producer_s_Email__c</fullName>
    <label>Producer&apos;s Email</label>
    <type>Email</type>
</CustomField>