force-app/main/default/objects/NewApp__c/fields/Producer_s_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Producer_s_Telephone__c</fullName>
    <label>Producer&apos;s Telephone</label>
    <type>Phone</type>
</CustomField>