force-app/main/default/objects/NewApp__c/fields/State_Mail__c.field-meta.xml
<CustomField>
    <fullName>State_Mail__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>