force-app/main/default/objects/NewApp__c/fields/Type_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Risk__c</fullName>
    <label>Type of Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Condominium</fullName>
            </value>
            <value>
                <fullName>Homeowners Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>