force-app/main/default/objects/NewApp__c/fields/Uninsured_Lawsuits_5_years__c.field-meta.xml
<CustomField>
    <fullName>Uninsured_Lawsuits_5_years__c</fullName>
    <label>Uninsured Lawsuits (5 years)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>