force-app/main/default/objects/NewApp__c/fields/Zip_Mail__c.field-meta.xml
<CustomField>
    <fullName>Zip_Mail__c</fullName>
    <label>Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>