force-app/main/default/objects/NewApp__c/recordTypes/Applicant3.recordType-meta.xml
<RecordType>
    <fullName>Applicant3</fullName>
    <active>true</active>
    <label>Applicant3</label>
</RecordType>